
- GZipped files were not being loaded correctly.

- Opening an XML file that specified an invalid encoding name in the
  <?xml?> processing instruction would throw an exception. Now, XML
  files that specify an invalid encoding are opened with the default
  encoding.

- Changed default shortcut of "Find Previous" from C+h to C+e g since on
  Mac OS X, C+h is always captured by the OS.

}}}
{{{ API Changes

- MiscUtilities.getFileExtension() now works with path names too.

}}}

}}}

{{{ Version 4.2pre6

Thanks to Magnus Henriksson, Mirco Bova, Ollie Rutherfurd, and
Stephen Bartlett for contributing to this release.

{{{ Syntax Highlighting

- Added Apache httpd.conf syntax highlighting (Ollie Rutherfurd).

- Improved Scheme syntax highlighting (Stephen Bartlett).

- Improved MS-DOS batch file syntax highlighting (Mirco Bova).

- Added MCS51 (8051) microcontroller assembly syntax highlighting
  (Mirco Bova).

- Updated XSLT syntax highlighting (Magnus Henriksson).

}}}
{{{ Miscellaneous

- Pressing TAB with a rectangular selection now inserts a tab at the
  appropriate column, instead of shifting indent to the right.

- Added Up/Down arrows to the file system browser's colors option pane.
  This lets you change the order that file names are matched against the
  patterns in the list.

- Collapsed/expanded arrow icons in file system browser should now look
  good with a dark background as well (Kris Kopicki).

- The option for what to do when files change on disk in the General
  pane of the Utilities->Global Options dialog box is now tri-state:

  - Do nothing
  - Prompt
  - Automatically reload

  The first and last options correspond to the previous setting in
  4.2pre5. The second option is similar to the behavior in jEdit 4.1,
  except all changed buffers are listed in one dialog box.

- Edit->Complete Word now completes words in all visible buffers (ie,
  showing in at least one edit pane). So as a poor man's CodeAid, you