@@ -119,14 +119,4 @@ public interface BufferChangeListener
 	 */
 	void foldHandlerChanged(Buffer buffer);
 	//}}}
-
-	//{{{ wrapModeChanged() method
-	/**
-	 * Called to notify the text area that the word wrap mode has changed.
-	 *
-	 * @param buffer The buffer in question
-	 * @since jEdit 4.2pre2
-	 */
-	void wrapModeChanged(Buffer buffer);
-	//}}}
 }
